Update and rename AlphaExperts.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="UTF-8"/>
     <title>AlphaExperts - обзоры на смартфоны, наушники, компьютеры, ноутбуки, часы, внешние аккумуляторы</title>
-	<link href="AlphaExperts.css" rel="stylesheet" type="text/css"/>
-	<script src="AlphaExperts.js"></script>
+	<link href="stylesheet.css" rel="stylesheet" type="text/css"/>
+	<script src="javascript.js"></script>
   </head>
   <body>
    <h1><a href="file:///C:/Users/Admin/Desktop/My%20projects/AlphaExperts.html">AlphaExperts</a></h1>
