--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8"/>
     <title>AlphaExperts - обзоры на смартфоны, наушники, компьютеры, ноутбуки, часы, внешние аккумуляторы</title>
 	<link href="stylesheet.css" rel="stylesheet" type="text/css"/>
+	<link rel="shortcut icon" href="images/favicon.png" type="image/png"/>
 	<script src="javascript.js"></script>
   </head>
   <body>
